<resources>
    <string name="app_name">FramePro</string>
    <string name="new_register">Novo Registro</string>
    <string name="measures_result">%1$.2fL X %2$.2fh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Descrição</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="save">Salvar</string>
    <string name="fields_cant_be_null">Impossível salvar, certifique-se de que nenhum campo está vazio.</string>
    <string name="type_frame_name">Nome da Esquadria</string>
    <string name="pcorrer_2f">Porta de Correr 2 Folhas</string>
    <string name="aluminium">Alumínio</string>
    <string name="keep_body">Guarda Corpo</string>
    <string name="fixed">Quadro Fixo</string>
    <string name="maxim_ar">Maxim Ar</string>
    <string name="pivot">Pivotante</string>
    <string name="jcorrer_4f">Janela de Correr 4 Folhas</string>
    <string name="jcorrer_3f">Janela de Correr 3 Folhas</string>
    <string name="jcorrer_2f">Janela de Correr 2 Folhas</string>
    <string name="pspin">Porta de Giro</string>
    <string name="pcorrer_4f">Porta de Correr 4 Folhas</string>
    <string name="pcorrer_3f">Porta de Correr 3 Folhas</string>
    <string name="add_frame">Adicionar Esquadria</string>
    <string name="width">Largura</string>
    <string name="height">Altura</string>
    <string name="saved_successfully">Salvo com sucesso.</string>
    <string name="check">Confirma</string>
    <string name="result">Resultado</string>
    <string name="no_register_created">Nenhum registro criado.</string>
    <string name="no_register_yet">Sem Registros, ainda.</string>
    <string name="default_option">Padrão</string>
    <string name="edit_mode">Editável</string>
    <string name="social">Social</string>
    <string name="about">Sobre</string>
    <string name="first_register">Faça seu primeiro registro, clique no botão \"Novo Registro\" abaixo.</string>
    <string name="plus">Mais</string>
    <string name="home">Home</string>
    <string name="create_frame">Nova Esquadria</string>
    <string name="frames">Esquadrias</string>
    <string name="finalize">Finalizar</string>
    <string name="about_the_app">Com o FramePro, você pode armazenar facilmente uma variedade de medidas, tudo em um único lugar. Não importa se você está trabalhando em projetos de construção, decoração, artesanato ou simplesmente precisa registrar medidas do dia a dia - o FramePro está aqui para facilitar.</string>
    <string name="thanks_about">Agradecemos por escolher o FramePro para suas necessidades de medição. Junte-se a nós e descubra como podemos simplificar e aprimorar a maneira como você salva suas medições!</string>
    <string name="bento_enterprise">Bento Enterprise</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="registers">Registros</string>
    <string name="new_frame">Nova Esquadria</string>
    <string name="material">Material</string>
    <string name="frame_name">Nome da Esquadria</string>
    <string name="pick_image">Escolha uma Imagem</string>
    <string name="created_pdf">Pdf Criado.</string>
    <string name="document">Documento</string>
</resources>