<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_default"
            android:title="@string/default_option" />

        <item
            android:id="@+id/edit_register"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_mode" />
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/about"
                android:title="@string/about" />

        </menu>
    </item>

</menu>