<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NewRegisterSheet">


    <TextView
        android:id="@+id/new_register_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_frame"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_photo"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_image_button"
        style="@style/NoRoundedCornersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@android:color/transparent"
        android:text="@string/pick_image"
        android:textColor="@color/purple_darker" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutUniqueColorForThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frame_name"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutUniqueColorForThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/material"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_bttn"
        style="@style/NoRoundedCornersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/purple_button"
        android:text="@string/save"
        android:textColor="@color/white" />

</LinearLayout>