<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bento_enterprise"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/black"

        android:layout_marginTop="10dp"
        android:text="@string/about_the_app"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/thanks_about"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_darker" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/social"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_github"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_toStartOf="@id/icon_insta"
            android:src="@drawable/github" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_insta"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/insta" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_linkedin"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/icon_insta"
            android:src="@drawable/linkedin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/github"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_below="@id/icon_github"
            android:layout_toStartOf="@id/icon_insta"
            android:layout_alignParentStart="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/instagram"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_below="@id/icon_insta"
            android:layout_toStartOf="@id/icon_linkedin"
            android:layout_toEndOf="@id/icon_github"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/linkedin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_below="@id/icon_linkedin"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon_insta"
            android:textStyle="bold" />


    </RelativeLayout>


</LinearLayout>